# docs/swagger.json
@@ -7,12 +7,12 @@
       "name": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     },
-    "description": "This is a documentation of students app"
+    "description": "This is a documentation of AquaTrack app"
   },
   "tags": [
     {
-      "name": "Students",
-      "description": "Operations about users."
+      "name": "Waters",
+      "description": "Operations about water."
     },
     {
       "name": "Auth",
@@ -21,16 +21,15 @@
   ],
   "servers": [
     {
-      "url": "http://localhost:3000/api-docs"
-    },
-    {
-      "url": "https://example.com/api/v1"
+      "url": "http://localhost:3000"
     }
   ],
   "paths": {
     "/water/{id}": {
       "delete": {
-        "tags": ["Waters"],
+        "tags": [
+          "Waters"
+        ],
         "summary": "Delete water record by id",
         "operationId": "deleteWater",
         "description": "Delete a water record by its ID",
@@ -58,7 +57,9 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status"],
+                  "required": [
+                    "status"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -69,6 +70,9 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/paths/~1water~1%7Bid%7D/get/responses/400"
+          },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
           },
@@ -78,7 +82,9 @@
         }
       },
       "get": {
-        "tags": ["Waters"],
+        "tags": [
+          "Waters"
+        ],
         "summary": "Get water by id",
         "operationId": "getWater",
         "description": "Get water by id",
@@ -105,7 +111,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -124,6 +134,43 @@
               }
             }
           },
+          "400": {
+            "description": "Invalid Id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 400
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Invalid Id"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "message"
+                      ],
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Invalid Water ID format"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
           "401": {
             "$ref": "#/paths/~1water/get/responses/401"
           },
@@ -133,7 +180,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -145,7 +196,9 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": ["message"],
+                      "required": [
+                        "message"
+                      ],
                       "properties": {
                         "message": {
                           "type": "string",
@@ -159,11 +212,122 @@
             }
           }
         }
+      },
+      "patch": {
+        "tags": [
+          "Waters"
+        ],
+        "summary": "Update water record by id",
+        "operationId": "updateWater",
+        "description": "Update water record by providing the id and new data",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "65ca67e7ae7f10c88b598384"
+            },
+            "description": "The unique identifier of the water record to update"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "volume": {
+                    "type": "number",
+                    "description": "New volume of water",
+                    "example": 750
+                  },
+                  "date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "New date for the water record (optional)",
+                    "example": "2024-12-31T12:11"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully updated water record",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully updated water record with id 65ca67e7ae7f10c88b598384!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "description": "Water's id",
+                          "type": "string",
+                          "example": "65e4decdd286b30065d54af9"
+                        },
+                        "date": {
+                          "description": "Water's date",
+                          "type": "string",
+                          "example": "2024-12-23T20:23"
+                        },
+                        "volume": {
+                          "description": "Water's volume. Should be minimum 50",
+                          "type": "number",
+                          "example": 50
+                        },
+                        "userId": {
+                          "description": "Water's user id",
+                          "type": "string",
+                          "example": "65e4decdd286b30065d54af9"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/paths/~1water/post/responses/400"
+          },
+          "401": {
+            "$ref": "#/paths/~1water/get/responses/401"
+          },
+          "404": {
+            "$ref": "#/paths/~1water~1%7Bid%7D/get/responses/404"
+          }
+        }
       }
     },
     "/water": {
       "get": {
-        "tags": ["Waters"],
+        "tags": [
+          "Waters"
+        ],
         "summary": "Get all water records",
         "operationId": "getAllWater",
         "description": "Retrieve all water records from the system",
@@ -179,7 +343,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -221,7 +389,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -233,7 +405,9 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": ["message"],
+                      "required": [
+                        "message"
+                      ],
                       "properties": {
                         "message": {
                           "type": "string",
@@ -252,7 +426,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -264,7 +442,9 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": ["message"],
+                      "required": [
+                        "message"
+                      ],
                       "properties": {
                         "message": {
                           "type": "string",
@@ -280,10 +460,12 @@
         }
       },
       "post": {
-        "tags": ["Students"],
-        "summary": "Create student",
-        "operationId": "createStudent",
-        "description": "Create a student with payload",
+        "tags": [
+          "Waters"
+        ],
+        "summary": "Create water",
+        "operationId": "createWater",
+        "description": "Create a water with payload",
         "security": [
           {
             "bearerAuth": []
@@ -294,42 +476,26 @@
             "multipart/form-data": {
               "schema": {
                 "type": "object",
-                "required": ["name", "age", "gender", "avgMark", "parentId"],
+                "required": [
+                  "valume",
+                  "date",
+                  "userId"
+                ],
                 "properties": {
-                  "name": {
-                    "description": "Student's name",
-                    "type": "string",
-                    "example": "John Doe"
-                  },
-                  "age": {
-                    "description": "Student's age",
+                  "valume": {
+                    "description": "Water's valume",
                     "type": "number",
-                    "example": 12
+                    "example": 250
                   },
-                  "gender": {
-                    "description": "Student's age",
+                  "date": {
+                    "description": "Date of creating water",
                     "type": "string",
-                    "enum": ["male", "female", "other"]
+                    "example": "2024-12-23T13:25"
                   },
-                  "avgMark": {
-                    "description": "Student's average mark. Should be between 1 and 12",
-                    "type": "number",
-                    "example": 9.7
-                  },
-                  "onDuty": {
-                    "description": "Whether is student on duty",
-                    "type": "boolean",
-                    "example": false
-                  },
-                  "parentId": {
-                    "description": "Student's parent id",
+                  "userId": {
+                    "description": "Water's user id",
                     "type": "string",
                     "example": "65e4decdd286b30065d54af9"
-                  },
-                  "photo": {
-                    "description": "Student''s photo",
-                    "type": "string",
-                    "format": "binary"
                   }
                 }
               }
@@ -338,24 +504,32 @@
         },
         "responses": {
           "201": {
-            "description": "Creates a student",
+            "description": "Successfully created water!",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
-                      "example": 200
+                      "example": 201
                     },
                     "message": {
                       "type": "string",
-                      "example": "Successfully created a student!"
+                      "example": "Successfully created water!"
                     },
                     "data": {
                       "type": "object",
-                      "required": ["date", "volume", "userId"],
+                      "required": [
+                        "date",
+                        "volume",
+                        "userId"
+                      ],
                       "properties": {
                         "_id": {
                           "description": "Water's id",
@@ -376,6 +550,43 @@
                           "description": "Water's user id",
                           "type": "string",
                           "example": "65e4decdd286b30065d54af9"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 400
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Bad Request"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "message"
+                      ],
+                      "properties": {
+                        "message": {
+                          "type": "string",
+                          "example": "Invalid request parameters."
                         }
                       }
                     }
